[tool.poetry]
name = "bat-stats-api"
version = "0.1.0"
description = ""
authors = ["jghibiki <me@jordan.goetze.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
psycopg2-binary = "^2.9.9"
django-q2 = "^1.6.1"
requests = "^2.31.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
