[tool.poetry]
name = "bat-stats-api"
version = "0.1.0"
description = ""
authors = ["jghibiki <me@jordan.goetze.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
psycopg2-binary = "^2.9.9"
django-q2 = "^1.6.1"
requests = "^2.31.0"
djangorestframework = "^3.14.0"
django-filter = "^23.5"
markdown = "^3.5.1"
django-debug-toolbar = "^4.2.0"
django-htmx = "^1.17.2"
pytailwindcss = "^0.2.0"
django-compressor = "^4.4"
django-components = "^0.29"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
